[tool.poetry]
name = "truesatisfieddeletions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
discord = "^1.0.1"
googletrans = "^3.1.0a0"
flask = "^1.1.2"
thread6 = "^0.2.0"
emoji = "^0.6.0"
Quart = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
